[package]
authors = ["David Goodlad <david@goodlad.net>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board Support Crate for the 1Bitsy development board"
documentation = "https://docs.rs/onebitsy"
edition = "2018"
keywords = ["arm", "cortex-m", "stm32", "1bitsy"]
license = "MIT"
readme = "README.md"
name = "onebitsy"
version = "0.1.1"
repository = "https://github.com/dgoodlad/onebitsy-rs"
exclude = [
    ".vscode/*",
]

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
embedded-hal = "0.2.3"

[dependencies.stm32f4xx-hal]
version = "0.8.0"
features = ["stm32f415", "rt"]

[dev-dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"

[features]
rt = ["stm32f4xx-hal/rt"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
